--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,7 @@ body {
 }
 
 body {
-  margin-top: 70px; /* Adjust the value based on your header height */
+  margin-top: 70px; 
 }
 
 @layer base {
